[gd_scene load_steps=19 format=3 uid="uid://cwtgcl4lq1b5x"]

[ext_resource type="Script" uid="uid://dolapihainuwk" path="res://scenes/background.gd" id="1_0wfyh"]
[ext_resource type="Texture2D" uid="uid://dhh01tv663xhs" path="res://assets/Background.png" id="1_o5qli"]
[ext_resource type="Script" uid="uid://b433plo1pgxh4" path="res://scenes/main.gd" id="1_sugp2"]
[ext_resource type="Script" uid="uid://cfpckmemrlhxn" path="res://scenes/player.gd" id="4_tbgi4"]
[ext_resource type="FontFile" uid="uid://b2qc2sa3cxrnr" path="res://assets/kenvector_future.ttf" id="6_tefeu"]
[ext_resource type="Texture2D" uid="uid://bou5uxivhy7rk" path="res://assets/Player.png" id="6_tipki"]
[ext_resource type="PackedScene" uid="uid://cgi0b1iqh72dp" path="res://scenes/obstacle.tscn" id="7_o6xl0"]
[ext_resource type="Texture2D" uid="uid://ddoouku8gir00" path="res://assets/Circle.png" id="8_choun"]
[ext_resource type="PackedScene" uid="uid://cc8kqrbnm13bn" path="res://scenes/coin.tscn" id="8_tipki"]
[ext_resource type="Script" uid="uid://d3o73tmr14nw" path="res://scenes/game_over.gd" id="9_85g3d"]
[ext_resource type="AudioStream" uid="uid://bqxuihajk1xg3" path="res://assets/CoinCollected.ogg" id="9_eb6dy"]
[ext_resource type="AudioStream" uid="uid://d0mop2ulnw36p" path="res://assets/GameOver.ogg" id="10_trceg"]
[ext_resource type="AudioStream" uid="uid://bj1a10ph0xe3c" path="res://assets/Music.wav" id="13_trceg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jyhfs"]
radius = 38.0132

[sub_resource type="Curve" id="Curve_ya4ey"]
_data = [Vector2(0, 0.551724), 0.0, 0.0, 0, 0, Vector2(0.866397, 0.17069), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbgi4"]
size = Vector2(800, 20)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6xl0"]
bg_color = Color(0.164706, 0.164706, 0.164706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tipki"]
bg_color = Color(0.133333, 0.854902, 0.454902, 1)

[node name="Main" type="Node"]
script = ExtResource("1_sugp2")
obstacle = ExtResource("7_o6xl0")
coin = ExtResource("8_tipki")

[node name="SpawnerTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="CoinSpawnerTimer" type="Timer" parent="."]
wait_time = 1.125
autostart = true

[node name="Background" type="Node2D" parent="." groups=["DynamicObject"]]
position = Vector2(0, 480)
scale = Vector2(2, 2)
script = ExtResource("1_0wfyh")

[node name="Background" type="Sprite2D" parent="Background"]
position = Vector2(400, 0)
texture = ExtResource("1_o5qli")

[node name="Background2" type="Sprite2D" parent="Background"]
position = Vector2(1200, 0)
texture = ExtResource("1_o5qli")

[node name="Player" type="RigidBody2D" parent="." groups=["Player"]]
position = Vector2(109, 481)
mass = 2.2
gravity_scale = 1.6
continuous_cd = 1
contact_monitor = true
max_contacts_reported = 5
script = ExtResource("4_tbgi4")

[node name="Sprite" type="Sprite2D" parent="Player"]
texture = ExtResource("6_tipki")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(4, 0)
shape = SubResource("CircleShape2D_jyhfs")

[node name="Particles" type="CPUParticles2D" parent="Player"]
top_level = true
position = Vector2(69, 465)
amount = 65
texture = ExtResource("8_choun")
speed_scale = 0.8
spread = 180.0
gravity = Vector2(-2000, 0)
initial_velocity_min = 70.0
initial_velocity_max = 100.0
scale_amount_min = 0.5
scale_amount_max = 0.5
scale_amount_curve = SubResource("Curve_ya4ey")
color = Color(0.760784, 0.25098, 0.25098, 0.556863)

[node name="CoinCollected" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("9_eb6dy")

[node name="GameOver" type="AudioStreamPlayer2D" parent="Player"]
process_mode = 3
stream = ExtResource("10_trceg")

[node name="Walls" type="Node2D" parent="."]

[node name="Ground" type="StaticBody2D" parent="Walls"]
position = Vector2(401, 970)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Ground"]
shape = SubResource("RectangleShape2D_tbgi4")

[node name="Roof" type="StaticBody2D" parent="Walls"]
position = Vector2(390, -934)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Roof"]
position = Vector2(11, 992)
shape = SubResource("RectangleShape2D_tbgi4")

[node name="UI" type="Control" parent="."]
z_index = 5
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar" type="ProgressBar" parent="UI"]
layout_mode = 0
offset_right = 1600.0
offset_bottom = 68.0
theme_override_styles/background = SubResource("StyleBoxFlat_o6xl0")
theme_override_styles/fill = SubResource("StyleBoxFlat_tipki")
value = 84.74
show_percentage = false

[node name="ScoreLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 795.0
offset_top = -2.0
offset_right = 805.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_tefeu")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOver" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_85g3d")

[node name="ColorRect" type="ColorRect" parent="GameOver"]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="GameOverLabel" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_tefeu")
theme_override_font_sizes/font_size = 100
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgainButton" type="Button" parent="GameOver/ColorRect"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = 108.0
offset_right = 256.0
offset_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_tefeu")
theme_override_font_sizes/font_size = 50
text = "Play Again"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_trceg")
autoplay = true

[connection signal="timeout" from="SpawnerTimer" to="." method="_on_spawner_timer_timeout"]
[connection signal="timeout" from="CoinSpawnerTimer" to="." method="_on_coin_spawner_timer_timeout"]
[connection signal="pressed" from="GameOver/ColorRect/PlayAgainButton" to="GameOver" method="_on_play_again_button_pressed"]
